--- a/dbenson2749ex1a/Web.config
+++ b/dbenson2749ex1a/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -10,7 +10,11 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-dbenson2749ex1a-20170108093156.mdf;Initial Catalog=aspnet-dbenson2749ex1a-20170108093156;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="AdventureWorksEFEntities" connectionString="metadata=res://*/Model.AdventureWorksModel.csdl|res://*/Model.AdventureWorksModel.ssdl|res://*/Model.AdventureWorksModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\AdventureWorksEF.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="AdventureWorksEFEntities" connectionString="metadata=res://*/Model.AdventureWorksModel.csdl|res://*/Model.AdventureWorksModel.ssdl|res://*/Model.AdventureWorksModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\AdventureWorksEF.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add 
+      name="AdventureWorksEFEntities" 
+      connectionString="metadata=res://*/Model.AdventureWorksModel.csdl|res://*/Model.AdventureWorksModel.ssdl|res://*/Model.AdventureWorksModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:dbenson1745dbsrv1.database.windows.net,1433;Initial Catalog=AdventureWorksEF;User ID=dbensonDbAdmin@dbenson1745dbsrv1;Password=Lizzybug-2016;MultipleActiveResultSets=True;App=EntityFramework&quot;" 
+      providerName="System.Data.EntityClient" />
   </connectionStrings>  
   <system.web>
     <authentication mode="None" />
